# xniff

./: .SRProject.plist  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  EXAMPLE.md  README.md  build.sh  macos.entitlements.plist  original_victim_xniff_supporting.c
Sources/libxniff/: assembler.c  assembler.h  patch.c  patch.h  tramp_template.S  xniff.c
Sources/libxniff/include/xniff/: inject.h  macho.h  patch.h  xniff.h
Sources/libxniff/src/: assembler.c  assembler.h  dylib_inject_stub.S  inject.c  macho_symbols.c  patch.c  remote_loader.S  tramp_ex_template.S  tramp_template.S
Sources/shared/: mach_private.h  xniff.h  xniff_ipc.c  xniff_ipc.h
Sources/xniff-cli/: main.c
Sources/xniff-hooks/: xpc_hooks.c
Sources/xniff-rt/: rt.c  rt.h
Sources/xniff-tests/: main.c
Sources/xpcdesert/: main.c  notes.txt  stream.c  stream.h
